tests/invalid_inputs/sema/pointer_access_through_object.cpp

struct S {
	int a;
};

void f() {
	S s;
	s->a;
}
